--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "target": "es2020",
     "module": "es2020",
     "lib": ["es2020", "dom"],
+    "strictPropertyInitialization": false,
     "resolveJsonModule": true,
     "esModuleInterop": true
   },
